--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.11.4",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "socket.io": "^3.0.4",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
