--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "express-validator": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.12.0",
     "mongoose": "^5.11.4",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
